Add New menu entry in the blog list's context menu to dequeue the selected blogs
- The menu entry can be activated in the advanced settings.
- Translations

--- a/src/TumblThree/TumblThree.Presentation/Views/ManagerView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/ManagerView.xaml
@@ -73,7 +73,7 @@
                                                     Header="{x:Static p:Resources.EnqueueSelection}"
                                                     InputGestureText="{x:Static p:Resources.ShiftReturn}" />
                                             <MenuItem Command="{Binding CrawlerService.DequeueSelectedCommand}"
-                                                    Header="Dequeue Selection" />
+                                                    Header="{x:Static p:Resources.DequeueSelection}" />
                                             <Separator />
                                             <MenuItem Command="{Binding CheckStatusCommand}"
                                                     Header="{x:Static p:Resources.CheckStatus}" />
